src/objects/Customer__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <label>微信群</label>
        <referenceTo>Customer_Group__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>电子邮件</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Monthly_Spending_RMB__c</fullName>
        <defaultValue>0</defaultValue>
        <label>本月消费金额(￥)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Spending_RMB__c</fullName>
        <defaultValue>0</defaultValue>
        <label>总消费金额(￥)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer_Group__c</columns>
        <columns>Total_Spending_RMB__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>微信昵称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>